    the upstream fix patches/any/cvs-bits-libc-stdio-lock.diff. This also
    stop installing <bits/libc-lock.h> and <bits/stdio-lock.h>.  Closes:
    #404532, #639697.
  * debian/control, debian/rules.d/control.mk, debian/sysdeps/arm.mk: remove
    support for the ARM old-ABI architecture, it is not supported upstream
    anymore.

 -- Aurelien Jarno <aurel32@debian.org>  Thu, 10 Dec 2015 23:41:13 +0100

glibc (2.22-0experimental1) experimental; urgency=medium

  [ Aurelien Jarno ]
  * debian/debhelper.in/libc-dev.install: install libmvec_nonshared.a.
    Closes: #806910.
  * debian/control.in/main, debian/rules: build with gcc-5.
  * patches/kfreebsd/local-sysdeps.diff, patches/kfreebsd/local-fbtl.diff:
    update to revision 5856 (from glibc-bsd):
    - Update to glibc 2.22.
  * debian/patches/kfreebsd/local-tst-malloc-backtrace.diff: new patch to fix
    tst-malloc-backtrace on GNU/kFreeBSD.
  * debian/sysdeps/ppc64el.mk: default to POWER8 and use default gcc options.
  * debian/rules.d/build.mk: explicitly disable mathvec when mvec=no.
  * debian/testsuite-checking/expected-results-s390x-linux-gnu-libc:
    allow elf/tst-protected1a and elf/tst-protected1b to fail as they are
    new tests. Cleanup resolved issues.
  * debian/testsuite-checking/expected-results-aarch64-linux-gnu-libc:
    cleanup resolved issues.
  * debian/rules.d/build.mk: abort if the log file does not contain any
    testsuite result.
  * debian/patches/localedata/submitted-locale-bo.diff: drop, now useless.
  * debian/patches/any/submitted-resolv-ipv6-nameservers.diff: drop, now
    useless.
  * debian/testsuite-checking/expected-results-powerpc-linux-gnu-libc,
    debian/testsuite-checking/expected-results-powerpc64-linux-gnu-ppc64:
    cleanup resolved issues.
  * debian/testsuite-checking/expected-results-powerpc-linux-gnu-powerpc,
    debian/testsuite-checking/expected-results-powerpc64-linux-gnu-libc:
    new files.