@@ -1,6 +1,3 @@
-libc_add-ons = $(add-ons)
-libc_extra_config_options = $(extra_config_options) --disable-sanity-checks
-
 # hppa64 needs symlink /usr/hppa64-linux/include to /usr/include
 # (See: Bug#239020)  In future we may drop this file with supporting hppa64.
 
