@@ -2,9 +2,9 @@
 ## A Debian-local glibc patch adds cmov to the search path.
 #GLIBC_PASSES += i686
 #DEB_ARCH_REGULAR_PACKAGES += libc0.3-i686
-#i686_add-ons = $(libc_add-ons)
 #i686_configure_target=i686-gnu
-#i686_extra_cflags = -march=i686 -mtune=generic
+#i686_CC = $(CC) -march=i686 -mtune=generic
+#i686_CXX = $(CXX) -march=i686 -mtune=generic
 #i686_slibdir = /lib/$(DEB_HOST_MULTIARCH)/i686/cmov
 #i686_extra_config_options = $(extra_config_options) --disable-compatible-utmp
 #
@@ -12,11 +12,11 @@
 ## greatly increase the speed when running under the 32bit Xen hypervisor.
 #GLIBC_PASSES += xen
 #DEB_ARCH_REGULAR_PACKAGES += libc0.3-xen
-#xen_add-ons = $(libc_add-ons)
 #xen_configure_target=i686-gnu
-#xen_extra_cflags = -march=i686 -mtune=generic -mno-tls-direct-seg-refs
+#xen_CC = $(CC) -march=i686 -mtune=generic
+#xen_CXX = $(CXX) -march=i686 -mtune=generic
+#xen_extra_cflags = -mno-tls-direct-seg-refs
 #xen_slibdir = /lib/$(DEB_HOST_MULTIARCH)/i686/nosegneg
-#xen_extra_config_options = $(extra_config_options)
 #
 #ifeq ($(filter stage1,$(DEB_BUILD_PROFILES)),)
 #define libc0.3-dev_extra_pkg_install
