@@ -1,26 +1,25 @@
+# configuration options for all flavours
 extra_config_options = --enable-multi-arch --enable-lock-elision
 MIN_KERNEL_SUPPORTED := 2.6.32
 
 # We use -march=i686 and glibc's i686 routines use cmov, so require it.
 # A Debian-local glibc patch adds cmov to the search path.
-# The optimized libraries also use NPTL!
 GLIBC_PASSES += i686
 DEB_ARCH_REGULAR_PACKAGES += libc6-i686
-i686_add-ons = $(add-ons)
 i686_configure_target=i686-linux-gnu
-i686_extra_cflags = -march=i686 -mtune=generic
+i686_CC = $(CC) -march=i686 -mtune=generic
+i686_CXX = $(CXX) -march=i686 -mtune=generic
 i686_slibdir = /lib/$(DEB_HOST_MULTIARCH)/i686/cmov
-i686_extra_config_options = $(extra_config_options)
 
 # We use -mno-tls-direct-seg-refs to not wrap-around segments, as it
 # greatly increase the speed when running under the 32bit Xen hypervisor.
 GLIBC_PASSES += xen
 DEB_ARCH_REGULAR_PACKAGES += libc6-xen
-xen_add-ons = $(add-ons)
 xen_configure_target=i686-linux-gnu
-xen_extra_cflags = -march=i686 -mtune=generic -mno-tls-direct-seg-refs
+xen_CC = $(CC) -march=i686 -mtune=generic
+xen_CXX = $(CXX) -march=i686 -mtune=generic
+xen_extra_cflags = -mno-tls-direct-seg-refs
 xen_slibdir = /lib/$(DEB_HOST_MULTIARCH)/i686/nosegneg
-xen_extra_config_options = $(extra_config_options)
 
 define libc6-xen_extra_pkg_install
 mkdir -p debian/libc6-xen/etc/ld.so.conf.d
@@ -36,13 +35,11 @@ endef
 GLIBC_MULTILIB_PASSES += amd64
 DEB_ARCH_MULTILIB_PACKAGES += libc6-amd64 libc6-dev-amd64
 libc6-amd64_shlib_dep = libc6-amd64 (>= $(shlib_dep_ver))
-amd64_add-ons = $(add-ons)
 amd64_configure_target = x86_64-linux-gnu
 # __x86_64__ is defined here because Makeconfig uses -undef and the
 # /usr/include/asm wrappers need that symbol.
 amd64_CC = $(CC) -m64 -D__x86_64__
 amd64_CXX = $(CXX) -m64 -D__x86_64__
-amd64_extra_config_options = $(extra_config_options)
 amd64_rtlddir = /lib64
 amd64_slibdir = /lib64
 amd64_libdir = /usr/lib64
@@ -82,11 +79,9 @@ endef
 GLIBC_MULTILIB_PASSES += x32
 DEB_ARCH_MULTILIB_PACKAGES += libc6-x32 libc6-dev-x32
 libc6-x32_shlib_dep = libc6-x32 (>= $(shlib_dep_ver))
-x32_add-ons = $(add-ons)
 x32_configure_target = x86_64-linux-gnux32
 x32_CC = $(CC) -mx32
 x32_CXX = $(CXX) -mx32
-x32_extra_config_options = $(extra_config_options)
 x32_rtlddir = /libx32
 x32_slibdir = /libx32
 x32_libdir = /usr/libx32
