@@ -1,17 +1,12 @@
-# Main library
-extra_config_options = --disable-compatible-utmp --disable-multi-arch --disable-werror
-
 # build 32-bit (i386) alternative library
 GLIBC_MULTILIB_PASSES += i386
 DEB_ARCH_MULTILIB_PACKAGES += libc0.1-i386 libc0.1-dev-i386
 libc0.1-i386_shlib_dep = libc0.1-i386 (>= $(shlib_dep_ver))
 
+i386_add-ons = $(libc_add-ons)
 i386_configure_target = i686-kfreebsd-gnu
-i386_CC = $(CC) -m32
-i386_CXX = $(CXX) -m32
-i386_add-ons = fbtl $(add-ons)
-i386_extra_cflags = -march=pentium4 -mtune=generic
-i386_extra_config_options = $(extra_config_options)
+i386_CC = $(CC) -m32 -march=pentium4 -mtune=generic
+i386_CXX = $(CXX) -m32 -march=pentium4 -mtune=generic
 i386_slibdir = /lib32
 i386_libdir = /usr/lib32
 
