@@ -11,8 +11,8 @@ mvec = no
 
 # NPTL Config
 threads = yes
+extra_config_options = --disable-compatible-utmp --disable-multi-arch --disable-werror
 libc_add-ons = fbtl $(add-ons)
-libc_extra_config_options = $(extra_config_options)
 
 ifndef KFREEBSD_SOURCE
   ifeq ($(DEB_HOST_GNU_TYPE),$(DEB_BUILD_GNU_TYPE))
