@@ -1,1 +1,0 @@
-libc_add-ons = $(add-ons)
