@@ -1,34 +1,30 @@
-libc_add-ons = $(add-ons)
-libc_rtlddir = /lib32
+# configuration options for all flavours
 extra_cflags = -mno-plt
+
+# main library
+libc_rtlddir = /lib32
 
 # build 64-bit alternative library
 GLIBC_MULTILIB_PASSES += mips64
 DEB_ARCH_MULTILIB_PACKAGES += libc6-mips64 libc6-dev-mips64
-mips64_add-ons = $(add-ons)
+libc6-mips64_shlib_dep = libc6-mips64 (>= $(shlib_dep_ver))
 mips64_configure_target = mips64el-linux-gnuabi64
-mips64_extra_cflags = -mno-plt
 mips64_CC = $(CC) -mabi=64
 mips64_CXX = $(CXX) -mabi=64
-libc6-mips64_shlib_dep = libc6-mips64 (>= $(shlib_dep_ver))
 mips64_rtlddir = /lib64
 mips64_slibdir = /lib64
 mips64_libdir = /usr/lib64
-mips64_extra_config_options := $(extra_config_options)
 
 # build 32-bit (o32) alternative library
 GLIBC_MULTILIB_PASSES += mips32
 DEB_ARCH_MULTILIB_PACKAGES += libc6-mips32 libc6-dev-mips32
-mips32_add-ons = $(add-ons)
+libc6-mips32_shlib_dep = libc6-mips32 (>= $(shlib_dep_ver))
 mips32_configure_target = mipsel-linux-gnu
-mips32_extra_cflags = -mno-plt
 mips32_CC = $(CC) -mabi=32
 mips32_CXX = $(CXX) -mabi=32
-libc6-mips32_shlib_dep = libc6-mips32 (>= $(shlib_dep_ver))
 mips32_rtlddir = /lib
 mips32_slibdir = /libo32
 mips32_libdir = /usr/libo32
-mips32_extra_config_options := $(extra_config_options)
 
 define libc6-dev-mips64_extra_pkg_install
 
