@@ -1,15 +1,16 @@
-libc_rtlddir = /lib64
+# configuration options for all flavours
 extra_config_options = --enable-multi-arch --enable-lock-elision
+
+# main library
+libc_rtlddir = /lib64
 
 # build 32-bit (powerpc) alternative library
 GLIBC_MULTILIB_PASSES += powerpc
 DEB_ARCH_MULTILIB_PACKAGES += libc6-powerpc libc6-dev-powerpc
 libc6-powerpc_shlib_dep = libc6-powerpc (>= $(shlib_dep_ver))
-powerpc_add-ons = $(add-ons)
 powerpc_configure_target = powerpc-linux-gnu
 powerpc_CC = $(CC) -m32
 powerpc_CXX = $(CXX) -m32
-powerpc_extra_config_options := $(extra_config_options)
 powerpc_slibdir = /lib32
 powerpc_libdir = /usr/lib32
 
