@@ -1,2 +1,5 @@
-libc_rtlddir = /lib64
+# configuration options for all flavours
 extra_config_options = --enable-multi-arch --enable-lock-elision --with-cpu=power8
+
+# main library
+libc_rtlddir = /lib64
