@@ -1,14 +1,13 @@
+# configuration options for all flavours
 extra_config_options = --disable-multi-arch
 
 # build 64-bit (sparc64) alternative library
 GLIBC_MULTILIB_PASSES += sparc64
 DEB_ARCH_MULTILIB_PACKAGES += libc6-sparc64 libc6-dev-sparc64
-sparc64_add-ons = $(add-ons)
+libc6-sparc64_shlib_dep = libc6-sparc64 (>= $(shlib_dep_ver))
 sparc64_configure_target=sparc64-linux-gnu
 sparc64_CC = $(CC) -m64
 sparc64_CXX = $(CXX) -m64
-libc6-sparc64_shlib_dep = libc6-sparc64 (>= $(shlib_dep_ver))
-sparc64_extra_config_options = $(extra_config_options)
 sparc64_rtlddir = /lib64
 sparc64_slibdir = /lib64
 sparc64_libdir = /usr/lib64
