@@ -1,16 +1,17 @@
+# configuration options for all flavours
 extra_config_options = --disable-multi-arch
+
+# main library
 libc_rtlddir = /lib64
 libc_extra_cflags = -mcpu=ultrasparc
 
 # build 32-bit (sparc) alternative library
 GLIBC_MULTILIB_PASSES += sparc
 DEB_ARCH_MULTILIB_PACKAGES += libc6-sparc libc6-dev-sparc
-sparc_add-ons = $(add-ons)
+libc6-sparc_shlib_dep = libc6-sparc (>= $(shlib_dep_ver))
 sparc_configure_target=sparc-linux-gnu
 sparc_CC = $(CC) -m32
 sparc_CXX = $(CXX) -m32
-libc6-sparc_shlib_dep = libc6-sparc (>= $(shlib_dep_ver))
-sparc_extra_config_options = $(extra_config_options)
 sparc_rtlddir = /lib
 sparc_slibdir = /lib32
 sparc_libdir = /usr/lib32
