@@ -1,16 +1,17 @@
-libc_rtlddir = /libx32
+# configuration options for all flavours
 extra_config_options = --enable-multi-arch --enable-lock-elision
 mvec = yes
+
+# main library
+libc_rtlddir = /libx32
 
 # build 64-bit (amd64) alternative library
 GLIBC_MULTILIB_PASSES += amd64
 DEB_ARCH_MULTILIB_PACKAGES += libc6-amd64 libc6-dev-amd64
 libc6-amd64_shlib_dep = libc6-amd64 (>= $(shlib_dep_ver))
-amd64_add-ons = $(add-ons)
 amd64_configure_target = x86_64-linux-gnu
 amd64_CC = $(CC) -m64
 amd64_CXX = $(CXX) -m64
-amd64_extra_config_options = $(extra_config_options)
 amd64_rtlddir = /lib64
 amd64_slibdir = /lib64
 amd64_libdir = /usr/lib64
@@ -37,12 +38,9 @@ endef
 GLIBC_MULTILIB_PASSES += i386
 DEB_ARCH_MULTILIB_PACKAGES += libc6-i386 libc6-dev-i386
 libc6-i386_shlib_dep = libc6-i386 (>= $(shlib_dep_ver))
-i386_add-ons = $(add-ons)
 i386_configure_target = i686-linux-gnu
-i386_CC = $(CC) -m32
-i386_CXX = $(CXX) -m32
-i386_extra_cflags = -march=pentium4 -mtune=generic
-i386_extra_config_options = $(extra_config_options)
+i386_CC = $(CC) -m32 -march=pentium4 -mtune=generic
+i386_CXX = $(CXX) -m32 -march=pentium4 -mtune=generic
 i386_slibdir = /lib32
 i386_libdir = /usr/lib32
 
